FIX: timer overflow on mobile

--- a/src/styles/components/_countdown.scss
+++ b/src/styles/components/_countdown.scss
@@ -66,6 +66,21 @@
     @include media('<=tablet') {
       height: 120px;
       border-radius: 26px;
+
+    }
+
+    @include media('<tablet') {
+      min-width: 3rem;
+
+      h1 {
+        font-size: 36px;
+        font-weight: 500;
+      }
+
+      p {
+        font-size: 12px;
+        font-weight: 400;
+      }
     }
 
     @include media('<=phone') {
@@ -75,7 +90,6 @@
 
       .time-element {
         min-width: 3rem;
-
       }
 
       h1 {
